5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1644_1054.log
== TEST (2019-04-09 17:01:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("valor de x: "))
y=float(input("valor de y: "))

if (2*x + y == 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"
	
ptint(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    ptint(mensagem)
NameError: name 'ptint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 17:01:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("valor de x: "))
y=float(input("valor de y: "))

if (2*x + y == 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"
	
print(mensagem)
-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:02:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x=float(input("valor de x: "))
y=float(input("valor de y: "))

if (2*x + y == 3):
	mensagem = "ponto pertence a reta"

else:
	mensagem = "ponto nao pertence a reta"
	
print(mensagem)
-- EXECUTION TIME:
0.133671
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
